web-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  labels:
    app: web-api
spec:
  replicas: 1  # initial replica count, matching autoscaling minReplicas
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
      - name: web-api
        image: tylere431/web-api:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
            memory: "250Mi"
          requests:
            cpu: "100m"
            memory: "150Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web-api
